project('hw3', 'cpp',
  version : '0.1',
  default_options : ['warning_level=3', 'cpp_std=c++17'])

executable('create_and_test_hash',
           'create_and_test_hash.cc',
           'quadratic_probing.h',
           install : true)

executable('spell_check',
           'spell_check.cc',
           'quadratic_probing.h',
           install : true)
